--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "license": "MIT",
     "scripts": {
         "start": "node src/server.js",
-        "dev": "nodemon src/server.js"
+        "dev": "nodemon src/server.js",
+        "heroku-prebuild": "npm install",
+        "heroku-postbuild": "echo This runs afterwards."
     },
     "devDependencies": {
         "nodemon": "^1.19.1",
@@ -21,5 +23,8 @@
         "mongoose": "^5.6.11",
         "socket.io": "^2.2.0",
         "yup": "^0.27.0"
+    },
+    "engines": {
+        "node": "10.3.0"
     }
 }
